<resources>
    <string name="app_name">soHappy</string>
    <string name="channel_id">soHappy</string>
    <string name="channel_name">soHappy</string>
    <string name="channel_description">soHappy Push Notifications</string>
    <string name="notification_name">soHappyNotification</string>
    <string name="notification_title">Remember to smile!</string>
    <string name="notification_description">It\'s been a while - tap here to open soHappy.</string>

    <string name="ui_start_button_name">Start</string>
    <string name="ui_welcome_title">Welcome to soHappy!</string>
    <string name="ui_welcome_description">Tap the Start button below to begin.</string>
    <string name="ui_overflow_explanation">Explanation</string>
    <string name="ui_overflow_history">History</string>
    <string name="ui_overflow_jokes">Jokes</string>
    <string name="ui_overflow_settings">Settings</string>
    <string name="ui_overflow_help">Help &amp; Contact</string>

    <string name="fragment_explanation_appbar_title">Explanation</string>
    <string name="fragment_explanation_01_title">Introduction</string>
    <string name="fragment_explanation_01_par1">soHappy allows you to measure and keep track of your happiness at any given time.</string>
    <string name="fragment_explanation_01_par2">Staying happy may often be forgotten in pursuit of other goals, even though it has been proven that happiness improves both physical and mental wellbeing and should thus not be ignored.</string>
    <string name="fragment_explanation_02_title">How to Use</string>
    <string name="fragment_explanation_02_par1">Start the app by tapping the Start button and follow the instructions as shown on the screen.</string>
    <string name="fragment_explanation_02_par2">You may need to move to sufficient lighting conditions in order to ensure that the app can detect your face.</string>
    <string name="fragment_explanation_03_par1">After the app has finished tracking your smiles, you will be presented with a questionnaire consisting of six questions.</string>
    <string name="fragment_explanation_03_par2">Answer them as honestly as possible and we\'ll tell you how likely you are genuinely happy.</string>

    <string name="fragment_camera_init">Move your face into the frame</string>
    <string name="fragment_camera_face">Take a deep breath and count to three</string>
    <string name="fragment_camera_stimulus1">Think about a time where someone made you laugh out loud unexpectedly</string>
    <string name="fragment_camera_smile">Smile detected!</string>
    <string name="fragment_camera_checkmark_text">Success!</string>
    <string name="fragment_camera_countdown_text">Counting down…</string>
    <string name="fragment_camera_countdown_initial">3</string>

    <string name="fragment_nosmile_appbar_title">No Smile Detected</string>
    <string name="fragment_nosmile_title">Something went wrong.</string>
    <string name="fragment_nosmile_description">We couldn\'t detect a smile for at least ten seconds. Would you like to try again or continue with the questionnaire?</string>
    <string name="fragment_nosmile_retry">Retry</string>
    <string name="fragment_nosmile_continue">Continue anyway</string>

    <string name="fragment_jokes_appbar_title">Jokes</string>
    <string name="fragment_jokes_search_hint">Search…</string>
    <!-- TODO: Refactor jokes to be drawn from a data source rather than from this XML -->
    <string name="fragment_jokes_sample_title">What\'s a Karen called in Europe?</string>
    <string name="fragment_jokes_sample_description">An American.</string>

    <string name="fragment_history_appbar_title">History</string>
    <string name="fragment_history_sample_date">September 2020</string>
    <string name="fragment_history_sample_day">Sep 05, 2020</string>
    <string name="fragment_history_sample_time">11:47</string>
    <string name="fragment_history_sample_result">83.61%</string>
    <string name="fragment_history_header_date">DATE</string>
    <string name="fragment_history_header_time">TIME</string>
    <string name="fragment_history_header_result">RESULT</string>

    <string name="fragment_help_name">Help &amp; Contact</string>
    <string name="fragment_help_credits">Credits</string>
    <string name="fragment_help_version">Version</string>
    <!-- TODO: Do not hardcode version -->
    <string name="fragment_help_version_value">1.0</string>
    <string name="fragment_help_imprint">Imprint</string>
    <string name="fragment_help_privacy">Privacy</string>
    <string name="fragment_help_license">License</string>
    <string name="fragment_help_feedback">Send Feedback</string>
    <string name="fragment_help_issue">Report Issue</string>
    <string name="fragment_help_legal">LEGAL INFORMATION</string>
    <string name="fragment_help_other">OTHER</string>

    <string name="fragment_settings_name">Settings</string>
    <string name="fragment_settings_general">GENERAL</string>
    <string name="fragment_settings_notification">Enable Notifications</string>
    <string name="fragment_settings_notification_text">If enabled, you will be reminded to open the app every once in a while.</string>
    <string name="fragment_settings_database">Send Usage Data</string>
    <string name="fragment_settings_database_text">If enabled, your usage data will be leveraged to improve the app.</string>

    <string name="fragment_questionnaire">Questionnaire</string>
    <string name="fragment_questionnaire_seekbar_initial">0</string>
    <string name="fragment_questionnaire_continue">Continue</string>
    <string name="fragment_questionnaire_01_title">Do you feel happy?</string>
    <string name="fragment_questionnaire_01_unhappy">Very unhappy</string>
    <string name="fragment_questionnaire_01_happy">Very happy</string>
    <string name="fragment_questionnaire_02_title">Where are you located right now?</string>
    <string-array name="fragment_questionnaire_02_choices">
        <item>Home</item>
        <item>Work</item>
        <item>University</item>
        <item>Shopping</item>
        <item>Café</item>
        <item>Restaurant</item>
        <item>Bar</item>
        <item>Club</item>
        <item>Outdoors Rural</item>
        <item>Outdoors City</item>
        <item>Town</item>
    </string-array>
    <string name="fragment_questionnaire_03_title">How much social interaction have you had since last using the app?</string>
    <string name="fragment_questionnaire_03_lots">Lots</string>
    <string name="fragment_questionnaire_03_none">None</string>
    <string name="fragment_questionnaire_04_title">Who was your most recent social interaction with?</string>
    <string-array name="fragment_questionnaire_04_choices">
        <item>Family</item>
        <item>Friend</item>
        <item>Colleague</item>
        <item>Acquaintance</item>
        <item>Stranger</item>
    </string-array>
    <string name="fragment_questionnaire_05_title">How physically active have you been since last using the app?</string>
    <string name="fragment_questionnaire_05_not_active">Not Active</string>
    <string name="fragment_questionnaire_05_very_active">Very Active</string>
    <string name="fragment_questionnaire_06_title">How tired do you feel at present?</string>
    <string name="fragment_questionnaire_06_not_tired">Not Tired</string>
    <string name="fragment_questionnaire_06_very_tired">Very Tired</string>

    <string name="fragment_results_appbar_title">Results</string>
    <string name="fragment_results_title">Thank you for your time!</string>
    <string name="fragment_results_text">Feel free to continue using the app. If you have enabled notifications, you will be reminded to open the app after a certain timeframe has passed.</string>
    <string name="fragment_results_results_overview">Your Result:</string>
    <string name="fragment_results_explanation">This result is an approximation how long you smiled during the measurement after you are requested to smile. A bad score does not mean that you are bad at being soHappy.</string>
    <string name="fragment_results_finish">Finish</string>

    <string name="config_exception_close_app">Close App</string>
    <string name="config_exception_restore_defaults">Restore Defaults</string>

    <string name="yes">Yes</string>
    <string name="close_app">Close App</string>

    <string name="load_config_activity_new_config">New configuration</string>
    <string name="load_config_activity_new_config_message">This looks like a soHappy configuration file - do you want to apply it?</string>
    <string name="load_config_activity_invalid_config">invalid configuration</string>
    <string name="load_config_activity_invalid_config_message">This does not look like a valid configuration file. Your configuration will reset back to the last working state.</string>
</resources>
