<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".questionnaire03Fragment">

    <data>
        <variable name="viewModel"
            type="de.hsaugsburg.teamulster.sohappy.viewmodel.QuestionnaireViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/fragment_questionnaire_03_title"
            android:textAppearance="@style/TextAppearanceHeadlineCustom1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/slider"
            style="@style/SeekBarAppearanceCustom"
            android:layout_width="280dp"
            android:layout_height="18dp"
            android:layout_marginBottom="256dp"
            android:max="10"
            android:progress="@={viewModel.questionnaire03Answer}"
            app:layout_constraintBottom_toTopOf="@+id/continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/noneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_questionnaire_03_none"
            app:layout_constraintStart_toStartOf="@+id/slider"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <TextView
            android:id="@+id/lotsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_questionnaire_03_lots"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginBottom="32dp"
            android:text="@string/fragment_questionnaire_continue"
            style="@style/ButtonPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
