<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".fragment.ResultsFragment">
    <data>
        <variable
            name="measurement"
            type="de.hsaugsburg.teamulster.sohappy.viewmodel.MeasurementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_results_title"
            android:textAppearance="@style/TextAppearanceHeadlineCustom1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4sp"
            android:gravity="center"
            android:text="@string/fragment_results_text"
            android:textAppearance="@style/TextAppearanceBodyCustom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_results_results_overview"
            android:textAppearance="@style/TextAppearanceHeadlineCustom2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/measurementValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@{measurement.computePercentageString()}"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTitle" />

        <Button
            android:id="@+id/finishButton"
            style="@style/ButtonDisabled"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginBottom="32dp"
            android:text="@string/fragment_results_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/updateProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/finishButton"
            app:layout_constraintEnd_toEndOf="@+id/finishButton"
            app:layout_constraintStart_toStartOf="@+id/finishButton"
            app:layout_constraintTop_toTopOf="@+id/finishButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>